--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,7 +1,7 @@
 <footer class="footer" id="footer">
 	<div class="container">
 		<div class="footer__info">
-			<p>Stichting Frontend Amsterdam<br> KvK 65751868<br> VAT NL856244740B01</p>
+			<p>GitNation Foundation<br> KvK 65751868<br> VAT NL856244740B01</p>
 			<p>Eksterstraat 49<br> 1021 EB Amsterdam</p>
 		</div>
 	</div>
