--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -5,4 +5,34 @@
 			<p>Eksterstraat 49<br> 1021 EB Amsterdam</p>
 		</div>
 	</div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="js/scripts.js?07062020"></script>
+
+  <div style="display: none">
+    <!--LiveInternet counter--><a href="//www.liveinternet.ru/click"
+                                  target="_blank"><img id="licntE6EF" width="31" height="31" style="border:0"
+                                                       title="LiveInternet"
+                                                       src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7"
+                                                       alt=""/></a><script>(function(d,s){d.getElementById("licntE6EF").src=
+      "//counter.yadro.ru/hit?t38.6;r"+escape(d.referrer)+
+      ((typeof(s)=="undefined")?"":";s"+s.width+"*"+s.height+"*"+
+          (s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
+      ";h"+escape(d.title.substring(0,150))+";"+Math.random()})
+  (document,screen)</script><!--/LiveInternet-->
+  </div>
+
+  <script type="text/javascript">
+      var _gauges = _gauges || [];
+      (function() {
+          var t   = document.createElement('script');
+          t.type  = 'text/javascript';
+          t.async = true;
+          t.id    = 'gauges-tracker';
+          t.setAttribute('data-site-id', '59d156cf4b9eb755e201553b');
+          t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
+          t.src = 'https://d36ee2fcip1434.cloudfront.net/track.js';
+          var s = document.getElementsByTagName('script')[0];
+          s.parentNode.insertBefore(t, s);
+      })();
+  </script>
 </footer>
