--- a/src/templates/partials/_events.html
+++ b/src/templates/partials/_events.html
@@ -6,14 +6,15 @@
 
 			<div class="events-tabs js-tabs-container">
 				<div class="events-tabs__btns">
-					<div class="events-tabs__btn js-tab-link is-active" data-tab="1">Conferences</div>
-					<div class="events-tabs__btn js-tab-link" data-tab="2">Community meetups</div>
+					{% for tab in pages.main.pageSections.eventTabs %}
+					<div class="events-tabs__btn js-tab-link {% if tab.active %}is-active{% endif %}" data-tab="{{ loop.index }}">{{ tab.title }}</div>
+					{% endfor %}
 				</div>
 
 				<div class="events-tabs__tabs">
 					<div class="events-tabs__tab js-tab is-active" data-tab="1">
 						<ul class="events">
-							{% for event in extendeds.events %}
+							{% for event in extendeds.eventConferences %}
 							<li class="events__item">
 								<div class="events__img-wrap">
 									<a href="{{ event.registerLink | safe }}">
@@ -38,7 +39,55 @@
 					</div>
 
 					<div class="events-tabs__tab js-tab" data-tab="2">
-						Community meetups
+						<ul class="events">
+							{% for event in extendeds.eventMeetups %}
+							<li class="events__item">
+								<div class="events__img-wrap">
+									<a href="{{ event.registerLink | safe }}">
+										<img src="{{ event.image.url }}">
+									</a>
+								</div>
+								<div class="events__content">
+									<div class="events__title">{{ event.title | safe }}</div>
+									<div class="events__desc">{{ event.subtitle | safe }}</div>
+
+									<div class="events__info">
+										<div class="events__stats">{{ event.description | safe }}</div>
+										<div class="events__links">{{ event.location | safe }}</div>
+										<div class="events__video">
+											<iframe width="560" height="315" src="{{ event.locationLink | safe }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										</div>
+									</div>
+								</div>
+							</li>
+							{% endfor %}
+						</ul>
+					</div>
+
+					<div class="events-tabs__tab js-tab" data-tab="3">
+						<ul class="events">
+							{% for event in extendeds.eventBroadcasted %}
+							<li class="events__item">
+								<div class="events__img-wrap">
+									<a href="{{ event.registerLink | safe }}">
+										<img src="{{ event.image.url }}">
+									</a>
+								</div>
+								<div class="events__content">
+									<div class="events__title">{{ event.title | safe }}</div>
+									<div class="events__desc">{{ event.subtitle | safe }}</div>
+
+									<div class="events__info">
+										<div class="events__stats">{{ event.description | safe }}</div>
+										<div class="events__links">{{ event.location | safe }}</div>
+										<div class="events__video">
+											<iframe width="560" height="315" src="{{ event.locationLink | safe }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										</div>
+									</div>
+								</div>
+							</li>
+							{% endfor %}
+						</ul>
 					</div>
 				</div>
 			</div>
