move footer data to CMS

--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,9 +1,6 @@
 <footer class="footer" id="footer">
 	<div class="container">
-		<div class="footer__info">
-			<p>GitNation Foundation<br> KvK 65751868<br> VAT NL856244740B01</p>
-			<p>Eksterstraat 49<br> 1021 EB Amsterdam</p>
-		</div>
+		<div class="footer__info">{{ pagesPieceOfTexts.footer__info | safe }}</div>
 	</div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="js/scripts.js?07062020"></script>
