--- a/src/sass/partials/_about.sass
+++ b/src/sass/partials/_about.sass
@@ -1,6 +1,31 @@
 .s-about
+	position: relative
 	background: url(../img/bg-about.jpg) center center
 	background-size: cover
+
+	&__video
+		position: absolute
+		display: block
+		width: 100%
+		height: 100%
+		top: 0
+		left: 0
+		z-index: 0
+		-o-object-fit: cover
+		object-fit: cover
+
+	&:after
+		content: ''
+		position: absolute
+		display: block
+		width: 100%
+		height: 100%
+		top: 0
+		left: 0
+		background: rgba(0, 0, 0, 0.4)
+
+	.container
+		z-index: 1
 
 .about
 	display: flex
