--- a/src/templates/partials/_about.html
+++ b/src/templates/partials/_about.html
@@ -1,5 +1,11 @@
 <section class="section dark s-about" id="about">
+	<video class="s-about__video" preload="auto" muted autoplay loop poster="img/hero_video.jpg">
+		<source src="video/about.webm" type="video/webm"/>
+		<source src="video/about.mp4" type="video/mp4"/>
+	</video>
+
 	<div class="container container--lg">
+
 		<h4 class="section__title">{{ pagesPieceOfTexts.about__title | safe }}</h4>
 
 		<div class="section__content about">
