--- a/src/sass/partials/_events.sass
+++ b/src/sass/partials/_events.sass
@@ -87,6 +87,63 @@
 		flex: 2 1
 		margin: 0 20px 0 0
 
+	&__video-wrap
+		position: relative
+		margin: 14px 0 0
+		width: 142px
+		height: 80px
+
+		&.is-active
+			width: auto
+			height: auto
+			position: fixed
+			display: flex
+			left: 0
+			top: -50px
+			right: 0
+			bottom: -50px
+			background: rgba(0, 0, 0, 0.3)
+			z-index: 100
+			align-items: center
+			justify-content: center
+
+			div
+				position: relative
+				width: 75%
+				padding-top: 42.8%
+
+			iframe
+				position: absolute
+				left: 0
+				top: 0
+				right: 0
+				bottom: 0
+				width: 100%
+				height: 100%
+
+				+med
+					width: 264px
+					height: 160px
+
+			&:after
+				display: none
+
+		+med
+			display: block
+			width: 264px
+			height: 160px
+			margin: 14px auto 0
+
+		&:after
+			content: ''
+			position: absolute
+			left: 0
+			top: 0
+			right: 0
+			bottom: 0
+			z-index: 1
+			cursor: pointer
+
 	&__video
 		flex: 2 1
 		margin: 0
@@ -95,15 +152,12 @@
 			flex: 2 1 100%
 
 		iframe
-			margin: 14px 0 0
 			width: 142px
 			height: 80px
 
 			+med
-				display: block
 				width: 264px
 				height: 160px
-				margin: 14px auto 0
 
 
 .events-tabs
