--- a/src/templates/partials/_events.html
+++ b/src/templates/partials/_events.html
@@ -29,7 +29,11 @@
 										<div class="events__stats">{{ event.description | safe }}</div>
 										<div class="events__links">{{ event.location | safe }}</div>
 										<div class="events__video">
-											<iframe width="560" height="315" src="{{ event.locationLink | safe }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<div class="events__video-wrap js-video-wrap">
+												<div>
+													<iframe class="js-video" width="560" height="315" src="{{ event.locationLink | safe }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -55,7 +59,11 @@
 										<div class="events__stats">{{ event.description | safe }}</div>
 										<div class="events__links">{{ event.location | safe }}</div>
 										<div class="events__video">
-											<iframe width="560" height="315" src="{{ event.locationLink | safe }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<div class="events__video-wrap js-video-wrap">
+												<div>
+													<iframe class="js-video" width="560" height="315" src="{{ event.locationLink | safe }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -81,7 +89,11 @@
 										<div class="events__stats">{{ event.description | safe }}</div>
 										<div class="events__links">{{ event.location | safe }}</div>
 										<div class="events__video">
-											<iframe width="560" height="315" src="{{ event.locationLink | safe }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<div class="events__video-wrap js-video-wrap">
+												<div>
+													<iframe class="js-video" width="560" height="315" src="{{ event.locationLink | safe }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
