--- a/src/sass/partials/_events.sass
+++ b/src/sass/partials/_events.sass
@@ -112,6 +112,11 @@
 				width: 75%
 				padding-top: 42.8%
 
+				+sm
+					width: 90%
+					padding-top: 50%
+
+
 			iframe
 				position: absolute
 				left: 0
@@ -120,10 +125,6 @@
 				bottom: 0
 				width: 100%
 				height: 100%
-
-				+med
-					width: 264px
-					height: 160px
 
 			&:after
 				display: none
