--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -27,7 +27,7 @@
           t.id    = 'gauges-tracker';
           t.setAttribute('data-site-id', '59d156cf4b9eb755e201553b');
           t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
-          t.src = 'https://d36ee2fcip1434.cloudfront.net/track.js';
+          t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';
           var s = document.getElementsByTagName('script')[0];
           s.parentNode.insertBefore(t, s);
       })();
