--- a/src/templates/partials/_events.html
+++ b/src/templates/partials/_events.html
@@ -7,12 +7,12 @@
 			<div class="events-tabs js-tabs-container">
 				<div class="events-tabs__btns">
 					{% for tab in pages.main.pageSections.eventTabs %}
-					<div class="events-tabs__btn js-tab-link {% if tab.active %}is-active{% endif %}" data-tab="{{ loop.index }}">{{ tab.title }}</div>
+					<div class="events-tabs__btn js-tab-link {% if tab.active %}is-active{% endif %}" data-tab="{{ tab.anchorLink }}" id="{{ tab.anchorLink }}">{{ tab.title }}</div>
 					{% endfor %}
 				</div>
 
 				<div class="events-tabs__tabs">
-					<div class="events-tabs__tab js-tab is-active" data-tab="1">
+					<div class="events-tabs__tab js-tab is-active" data-tab="conferences">
 						<ul class="events">
 							{% for event in extendeds.eventConferences %}
 							<li class="events__item">
@@ -44,7 +44,7 @@
 						</ul>
 					</div>
 
-					<div class="events-tabs__tab js-tab" data-tab="2">
+					<div class="events-tabs__tab js-tab" data-tab="community-meetups">
 						<ul class="events">
 							{% for event in extendeds.eventMeetups %}
 							<li class="events__item">
@@ -76,7 +76,7 @@
 						</ul>
 					</div>
 
-					<div class="events-tabs__tab js-tab" data-tab="3">
+					<div class="events-tabs__tab js-tab" data-tab="broadcasted-events">
 						<ul class="events">
 							{% for event in extendeds.eventBroadcasted %}
 							<li class="events__item">
