update diversity and inclusion page, move to build folder

--- a/src/templates/diversity-and-inclusion.html
+++ b/src/templates/diversity-and-inclusion.html
@@ -124,7 +124,7 @@
 
 			<div class="address clearfix">
 				<div class="container">
-					<p class="address__left">GitNation<br/> KvK 65751868<br/> VAT NL856244740B01</p>
+					<p class="address__left">GitNation Foundation<br/> KvK 65751868<br/> VAT NL856244740B01</p>
 					<p class="address__right">Eksterstraat 49<br/> 1021 EB Amsterdam</p>
 				</div>
 			</div>
