update old multipass page

--- a/src/templates/conference-multipass.html
+++ b/src/templates/conference-multipass.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <html lang="en">
-      <title>GitNation</title>
+      <title>Conference Multipass 20/21</title>
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="css/style4ae87e.css" />
+      <link rel="stylesheet" href="css/style.css" />
       <link rel="shortcut icon" href="img/favicon.png" />
+      <link rel="canonical" href="https://gitnation.org/multipass-subscription" />
       <meta name="keywords" content="" />
       <meta name="description" content="" />
       <meta name="twitter:card" content="" />
@@ -92,8 +93,8 @@
                       </a>
                     </li>
                     <li class="h-menu__item">
-                      <a href="/conference-multipass" class="h-menu__link ">
-                        <span>Conference multipass</span>
+                      <a href="/multipass-subscription" class="h-menu__link ">
+                        <span>(new) Subscription multipass</span>
                       </a>
                     </li>
                   </ul>
@@ -105,13 +106,13 @@
                   <!-- <span></span> -->
                 </div>
               </div>
-              <h2 class="hero__title">CONFERENCE<br> MULTIPASS</h2>
+              <h2 class="hero__title">CONFERENCE<br> MULTIPASS (20/21)</h2>
             </div>
           </div>
         </section>
         <section class="section s-citizenship ">
           <div class="container container--lg">
-            <h4 class="section__title big">Get access to 3 remote conferences and a number of exclusive perks for <s>380</s> 270 €*!</h4>
+            <h4 class="section__title big">This season-based multipass is outdated as of April 14 in favor of the new <a href="/multipass-subscription">subscription-style multipass</a>.</h4>
             <div class="section__content s-citizenship__content citizenship-info">
               <div class="citizenship-info__card">
                 <div class="visa-card">
@@ -122,7 +123,7 @@
                   </div>
                   <div class="visa-card__desc">
                     <h3>Korben<br> Dallas</h3>
-                    <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="1f77765f78766b717e6b76707131706d78">[email&#160;protected]</a></p>
+                    <p>hi@gitnation.org</p>
                   </div>
                 </div>
               </div>
@@ -144,7 +145,7 @@
               </div>
             </div>
             <div class="section__content s-citizenship__content text-based">
-              <h5>The Multipass provides free access to our upcoming remote conferences, and you also receive a 25% discount for any in-person event organized by GitNation. The Multipass is valid for all conferences up till end of June 2021.</h5>
+              <h5>Multipasses purchased up until April 14th 2021 are valid until June 30, 2021. With moving to subscription-style Multipass, all newly bought passes will now last for a year from purchase date with all events included in the period.</h5>
               <div class="pass-list">
                 <div class="pass-list__item">
                   <div class="pass-list__img-wrap">
@@ -287,7 +288,7 @@
                   <p>We’re looking for partnership opportunities, and we’re open to any ideas you might have. </p>
                 </div>
                 <div class="mission__mail">
-                  <p><a href="/cdn-cgi/l/email-protection#254053404b515665424c514b44514c4a4b0b4a5742"><span class="__cf_email__" data-cfemail="5d382b3833292e1d3a3429333c2934323373322f3a">[email&#160;protected]</span></a></p>
+                  <p><a href="mailto:events@gitnation.org">events@gitnation.org</a></p>
                 </div>
               </div>
             </div>
