restore legay files, configurable og/meta, optimize fronez multipass page

--- a/src/templates/diversity-and-inclusion.html
+++ b/src/templates/diversity-and-inclusion.html
@@ -1,32 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8" />
-	<title>GitNation - Diversity & Accessibility Statement</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="css/main.css?07062020" />
-	<link rel="shortcut icon" href="img/favicon.png?v2"/>
-	<link rel="manifest" href="/site.webmanifest">
-	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="theme-color" content="#ffffff">
+---
+pageKey: diversity
+legacyPage: true
+title: GitNation - Diversity & Accessibility Statement
+description: GitNation is a foundation contributing to the development of the technological landscape by organizing events which focus on the open source software.
+ogUrl: https://gitnation.org/diversity-and-inclusion
+ogImage: https://gitnation.org/img/og-gitnation.png
+---
 
-	<meta property="og:url"                content="http://www.gitnation.org/diversity" />
-	<meta property="og:type"               content="website" />
-	<meta property="og:title"              content="Giving Open Source a human face." />
-	<meta property="og:description"        content="We organize events for a bigger cause — we want modern Tech Community to become a better place for developers and enthusiasts alike by encouraging professional growth opportunities, skills evolution and nurturing passion for the craft." />
-	<meta property="og:image"              content="http://gitnation.org/img/og-gitnation.png" />
+{% extends "layouts/_layout.html" %}
 
-	<meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@gitnationorg">
-</head>
-
-<body>
-
-<div class="wrapper">
+{% block content %}
 
 	<header class="header header_inner">
 		<svg class="smiles__img" role="img" aria-hidden="true">
@@ -132,10 +115,4 @@
 
 	</main><!-- .content -->
 
-</div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="js/scripts.js?07062020"></script>
-
-</body>
-</html>
+{% endblock %}
