--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,9 @@
 ---
 pageKey: main
-title: GitNation
+title: GitNation Events - Giving Open Source a human face
+description: GitNation is a foundation contributing to the development of the technological landscape by organizing events which focus on the open source software.
+ogUrl: https://gitnation.org
+ogImage: https://gitnation.org/img/og-gitnation.png
 ---
 
 {% extends "layouts/_layout.html" %}
