--- a/src/templates/multipass-subscription.html
+++ b/src/templates/multipass-subscription.html
@@ -1,6 +1,9 @@
 ---
 pageKey: multipass
 title: Conference Multipass Subscription
+description: Get a conference pass unlocking access to a number of remote and hybrid JavaScript events and the collection of recordings including talks and workshops.
+ogUrl: https://gitnation.org/multipass-subscription
+ogImage: https://gitnation.org/img/og-gitnation.png
 inner: true
 ---
 
