--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -3,68 +3,106 @@
 <html lang="en">
 <head>
 	<html lang="en">
-	<title>{{ title }}</title>
+	<title>{{ title | safe }}</title>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  {% if legacyPage %}
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="css/legacy-main.css?07062020">
+  {% else %}
 	<link rel="stylesheet" href="css/style.css" />
+  {% endif %}
 	<link rel="shortcut icon" href="img/favicon.png"/>
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
-	<meta name="twitter:card" content=""/>
-	<meta name="twitter:site" content=""/>
+	<meta name="description" content="{{ description | safe }}" />
+  <meta name="twitter:card" content="summary_large_image">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
-	<meta property="og:url"                content="http://www.gitnation.org" />
+	<meta property="og:url"                content="{{ ogUrl }}" />
 	<meta property="og:type"               content="website" />
-	<meta property="og:title"              content="Giving Open Source a human face." />
-	<meta property="og:description"        content="We organize events for a bigger cause — we want modern Tech Community to become a better place for developers and enthusiasts alike by encouraging professional growth opportunities, skills evolution and nurturing passion for the craft." />
-	<meta property="og:image"              content="http://gitnation.org/img/og-gitnation.png" />
+	<meta property="og:title"              content="{{ title | safe }}" />
+	<meta property="og:description"        content="{{ description | safe }}" />
+	<meta property="og:image"              content="{{ ogImage }}" />
+  <meta name="twitter:site" content="@gitnationorg">
 </head>
 
 <body>
 
-<div class="wrapper">
-	<div class="overlay js-overlay"></div>
+  <div class="wrapper">
+    <div class="overlay js-overlay"></div>
 
-	{% block content %}
-	{% endblock %}
+    {% block content %}
+    {% endblock %}
 
-</div>
+  </div>
 
-<!-- <script type="text/javascript">
-	var _gauges = _gauges || [];
-	(function() {
-		var t   = document.createElement('script');
-		t.type  = 'text/javascript';
-		t.async = true;
-		t.id    = 'gauges-tracker';
-		t.setAttribute('data-site-id', '5ca4d31d67e90a079f05add6');
-		t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
-		t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';
-		var s = document.getElementsByTagName('script')[0];
-		s.parentNode.insertBefore(t, s);
-	})();
-</script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  {% if legacyPage %}
+  <script src="js/legacy-scripts.js"></script>
+  {% else %}
+  <script src="js/app.js"/>
+  {% endif %}
 
-<!-- Facebook Pixel Code -->
-<!-- <script>
-	!function(f,b,e,v,n,t,s)
-	{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-		n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-		if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-		n.queue=[];t=b.createElement(e);t.async=!0;
-		t.src=v;s=b.getElementsByTagName(e)[0];
-		s.parentNode.insertBefore(t,s)}(window, document,'script',
-		'https://connect.facebook.net/en_US/fbevents.js');
-	fbq('init', '1374905195888955');
-	fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1374905195888955&ev=PageView&noscript=1"/></noscript> -->
-<!-- End Facebook Pixel Code -->
+  <div style="display: none">
+    <!--LiveInternet counter--><a href="//www.liveinternet.ru/click"
+                                  target="_blank"><img id="licntE6EF" width="31" height="31" style="border:0"
+                                                       title="LiveInternet"
+                                                       src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7"
+                                                       alt=""/></a><script>(function(d,s){d.getElementById("licntE6EF").src=
+      "//counter.yadro.ru/hit?t38.6;r"+escape(d.referrer)+
+      ((typeof(s)=="undefined")?"":";s"+s.width+"*"+s.height+"*"+
+          (s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
+      ";h"+escape(d.title.substring(0,150))+";"+Math.random()})
+  (document,screen)</script><!--/LiveInternet-->
+  </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="js/app.js"></script>
+  <script type="text/javascript">
+      var _gauges = _gauges || [];
+      (function() {
+          var t   = document.createElement('script');
+          t.type  = 'text/javascript';
+          t.async = true;
+          t.id    = 'gauges-tracker';
+          t.setAttribute('data-site-id', '59d156cf4b9eb755e201553b');
+          t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
+          t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';
+          var s = document.getElementsByTagName('script')[0];
+          s.parentNode.insertBefore(t, s);
+      })();
+  </script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164513444-3"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-164513444-3');
+  </script>
+
+  <!-- Global site tag (gtag.js) - Google Ads: 805657772 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-805657772"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-805657772');
+  </script>
+
+  <!-- Twitter universal website tag code -->
+  <script>
+      !function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
+      },s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='//static.ads-twitter.com/uwt.js',
+          a=t.getElementsByTagName(n)[0],a.parentNode.insertBefore(u,a))}(window,document,'script');
+      // Insert Twitter Pixel ID and Standard Event data below
+      twq('init','o4cku');
+      twq('track','PageView');
+  </script>
+  <!-- End Twitter universal website tag code -->
+
+  <!-- Facebook Pixel Code --> <script> !function(f,b,e,v,n,t,s) {if(f.fbq)return;n=f.fbq=function(){n.callMethod? n.callMethod.apply(n,arguments):n.queue.push(arguments)}; if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0'; n.queue=[];t=b.createElement(e);t.async=!0; t.src=v;s=b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t,s)}(window, document,'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '1374905195888955'); fbq('track', 'PageView'); </script> <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1374905195888955&ev=PageView&noscript=1" /></noscript> <!-- End Facebook Pixel Code -->
 
 </body>
 </html>
