--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -43,66 +43,75 @@
   <script src="js/app.js"/>
   {% endif %}
 
-  <div style="display: none">
-    <!--LiveInternet counter--><a href="//www.liveinternet.ru/click"
-                                  target="_blank"><img id="licntE6EF" width="31" height="31" style="border:0"
-                                                       title="LiveInternet"
-                                                       src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7"
-                                                       alt=""/></a><script>(function(d,s){d.getElementById("licntE6EF").src=
-      "//counter.yadro.ru/hit?t38.6;r"+escape(d.referrer)+
-      ((typeof(s)=="undefined")?"":";s"+s.width+"*"+s.height+"*"+
-          (s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
-      ";h"+escape(d.title.substring(0,150))+";"+Math.random()})
-  (document,screen)</script><!--/LiveInternet-->
-  </div>
-
-  <script type="text/javascript">
-      var _gauges = _gauges || [];
-      (function() {
-          var t   = document.createElement('script');
-          t.type  = 'text/javascript';
-          t.async = true;
-          t.id    = 'gauges-tracker';
-          t.setAttribute('data-site-id', '59d156cf4b9eb755e201553b');
-          t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
-          t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';
-          var s = document.getElementsByTagName('script')[0];
-          s.parentNode.insertBefore(t, s);
-      })();
-  </script>
+<!--  <script type="text/javascript">-->
+<!--      var _gauges = _gauges || [];-->
+<!--      (function() {-->
+<!--          var t   = document.createElement('script');-->
+<!--          t.type  = 'text/javascript';-->
+<!--          t.async = true;-->
+<!--          t.id    = 'gauges-tracker';-->
+<!--          t.setAttribute('data-site-id', '59d156cf4b9eb755e201553b');-->
+<!--          t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');-->
+<!--          t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';-->
+<!--          var s = document.getElementsByTagName('script')[0];-->
+<!--          s.parentNode.insertBefore(t, s);-->
+<!--      })();-->
+<!--  </script>-->
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164513444-3"></script>
   <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', 'UA-164513444-3');
+      const GA_LOCAL_STORAGE_KEY = 'ga:clientId';
+      const nanoid=(t=21)=>{let e="",r=crypto.getRandomValues(new Uint8Array(t));for(;t--;){let n=63&r[t];e+=n<36?n.toString(36):n<62?(n-26).toString(36).toUpperCase():n<63?"_":"-"}return e};
+      let GAClientId;
+
+      if (window.localStorage) {
+        if (localStorage.getItem(GA_LOCAL_STORAGE_KEY)) {
+          GAClientId = localStorage.getItem(GA_LOCAL_STORAGE_KEY)
+        } else {
+          const userId = nanoid();
+          GAClientId = userId;
+          setTimeout(() => {
+            window.localStorage.setItem(GA_LOCAL_STORAGE_KEY, userId)
+          }, 100)
+        }
+      }
+
+      gtag('js', new Date());
+      gtag('config', 'UA-164513444-3', {
+        send_page_view: true,
+        client_storage: 'none',
+        client_id: GAClientId,
+      });
   </script>
 
   <!-- Global site tag (gtag.js) - Google Ads: 805657772 -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-805657772"></script>
-  <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+<!--  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-805657772"></script>-->
+<!--  <script>-->
+<!--      window.dataLayer = window.dataLayer || [];-->
+<!--      function gtag(){dataLayer.push(arguments);}-->
+<!--      gtag('js', new Date());-->
 
-      gtag('config', 'AW-805657772');
-  </script>
+<!--      gtag('config', 'AW-805657772');-->
+<!--  </script>-->
 
   <!-- Twitter universal website tag code -->
-  <script>
-      !function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
-      },s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='//static.ads-twitter.com/uwt.js',
-          a=t.getElementsByTagName(n)[0],a.parentNode.insertBefore(u,a))}(window,document,'script');
-      // Insert Twitter Pixel ID and Standard Event data below
-      twq('init','o4cku');
-      twq('track','PageView');
-  </script>
+<!--  <script>-->
+<!--      !function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);-->
+<!--      },s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='//static.ads-twitter.com/uwt.js',-->
+<!--          a=t.getElementsByTagName(n)[0],a.parentNode.insertBefore(u,a))}(window,document,'script');-->
+<!--      // Insert Twitter Pixel ID and Standard Event data below-->
+<!--      twq('init','o4cku');-->
+<!--      twq('track','PageView');-->
+<!--  </script>-->
   <!-- End Twitter universal website tag code -->
 
-  <!-- Facebook Pixel Code --> <script> !function(f,b,e,v,n,t,s) {if(f.fbq)return;n=f.fbq=function(){n.callMethod? n.callMethod.apply(n,arguments):n.queue.push(arguments)}; if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0'; n.queue=[];t=b.createElement(e);t.async=!0; t.src=v;s=b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t,s)}(window, document,'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '1374905195888955'); fbq('track', 'PageView'); </script> <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1374905195888955&ev=PageView&noscript=1" /></noscript> <!-- End Facebook Pixel Code -->
+  <!-- Facebook Pixel Code -->
+<!--  <script> !function(f,b,e,v,n,t,s) {if(f.fbq)return;n=f.fbq=function(){n.callMethod? n.callMethod.apply(n,arguments):n.queue.push(arguments)}; if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0'; n.queue=[];t=b.createElement(e);t.async=!0; t.src=v;s=b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t,s)}(window, document,'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '1374905195888955'); fbq('track', 'PageView'); </script> <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1374905195888955&ev=PageView&noscript=1" /></noscript>-->
+  <!-- End Facebook Pixel Code -->
 
 </body>
 </html>
