--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -40,7 +40,7 @@
   {% if legacyPage %}
   <script src="js/legacy-scripts.js"></script>
   {% else %}
-  <script src="js/app.js"/>
+  <script src="js/app.js"></script>
   {% endif %}
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
